Fix margin issue on mobile

--- a/style.scss
+++ b/style.scss
@@ -448,3 +448,7 @@ tbody tr:nth-child(odd) th {
 .kill-margin {
   margin-bottom: 0px;
 }
+
+.add-margin {
+  margin-bottom: 20px;
+}
